--- a/app/modules/engine/views/admin/post.phtml
+++ b/app/modules/engine/views/admin/post.phtml
@@ -15,6 +15,10 @@ if ($this->flashSession->output()) { ?>
             <input type="text" name="description" class="form-control"
                    placeholder="Enter some description">
         </div>
+        <div class="form-group">
+            <label>Type</label>
+            <?= $form->render('type', array("class" => 'form-control')) ?>
+        </div>
         <button type="submit" class="btn btn-default">Post</button>
     </form>
 </div>
