--- a/app/modules/engine/views/index.phtml
+++ b/app/modules/engine/views/index.phtml
@@ -55,6 +55,9 @@
                                             <a href="/contact">Contact</a>
                                         </li>
                                         <li>
+                                           <a href="/admin/help-desk">Help Desk</a>
+                                        </li>
+                                        <li>
                                              <a href="/admin/sign-out">Sing out</a>
                                         </li>
                                     </ul>
