--- a/app/modules/engine/views/help-desk/issueedit.phtml
+++ b/app/modules/engine/views/help-desk/issueedit.phtml
@@ -4,21 +4,17 @@ if ($this->flashSession->output()) { ?>
 <?php } ?>
 
 <div class="col-sm-6" style="margin-left: 25%;">
-    <form role="form" action="/admin/new-post" method="post">
+    <form role="form" action="/admin/issue/edit/<?php echo $post->getId() ?>" method="post">
         <div class="form-group">
             <label>Title</label>
             <input type="text" name="title" class="form-control"
-                   placeholder="Enter title of issue">
+                   value="<?php echo $post->getTitle() ?>">
         </div>
         <div class="form-group">
             <label>Description</label>
             <input type="text" name="description" class="form-control"
-                   placeholder="Enter some description">
+                   value="<?php echo $post->getDescription() ?>">
         </div>
-        <div class="form-group">
-            <label>Type</label>
-            <?= $form->render('type', array("class" => 'form-control')) ?>
-        </div>
-        <button type="submit" class="btn btn-default">Post</button>
+        <button type="submit" class="btn btn-default">Edit</button>
     </form>
 </div>
